Add mask URL & using dos2unix to chnage into LF

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
     </div>
     -->
 
-    <h5 style="margin:20px;color:navy">我要買快篩 <a target="_blank" href="https://www.mohw.gov.tw/cp-5267-69284-1.html">如何購買家用快篩？</a></h5>
+    <h5 style="margin:20px;color:navy">我要買快篩
+        <a target="_blank" href="https://www.mohw.gov.tw/cp-5267-69284-1.html">如何購買家用快篩？</a>
+        <a class="text-success" target="_blank" href="https://peter279k.github.io/pharmacy">我要買口罩</a>
+    </h5>
     <p>
         <label style="margin-left:20px;">請輸入關鍵字過濾(如基隆市中正區):
             <input id="myInput" type="text" placeholder="Search.." />
