Add error eventMessage situation and update button

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <label>
             <input id="all" style="margin-left:20px;" type="button" value="全部顯示" />
         </label>
+        <label>
+            <input id="update" style="margin-left:20px;" type="button" value="立即更新資料" />
+        </label>
     </p>
     <span id="msg" style="margin-left:20px;">(載入全部資料需花一點時間，請稍候)</span>
 
