--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
     </script>
 
-    <script type="text/javascript" src="pharmacyHandler.js">
-    </script>
+    <script type="text/javascript" src="pharmacyHandler.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/appwrite@7.0.0"></script>
 </head>
 
 <body>
