--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="author" content="SOSELab@NTOU">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <link rel="stylesheet" href="pharmacyStyle.css">
